--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "start": "concurrently \"node dist/index.js\" \"node dist/proxy.js\""
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
